# poise-shuttle-bot-example

./: .gitignore  Cargo.toml  Secrets.toml.example  flake.nix  shell.nix
src/: main.rs
src/commands/: help.rs  mod.rs  utils.rs
src/utils/: error.rs
