[package]
name = "cerebro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
poise = "0.6.1"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"
shuttle-serenity = "0.41.0"
tokio = "1.36.0"
tracing = "0.1.40"
