[package]
name = "cerebro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
tracing = "0.1.37"
tokio = "1.26.0"
